--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@arcgis/webpack-plugin": "^4.13.1",
     "@types/arcgis-js-api": "^4.13.0",
     "esri-loader": "^2.12.0",
+    "font-awesome": "^4.7.0",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.2",
     "rxjs": "~6.4.0",
