--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,10 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es5",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "./types"
     ],
     "lib": [
       "es2018",
