--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.2",
     "rxjs": "~6.4.0",
+    "terraformer-arcgis-parser": "^1.1.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
