--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,8 @@
                             "node_modules/primeicons/primeicons.css",
                             "node_modules/primeng/resources/themes/nova-light/theme.css",
                             "node_modules/primeng/resources/primeng.min.css",
-                            "node_modules/font-awesome/css/font-awesome.css"
-
+                            "node_modules/font-awesome/css/font-awesome.css",
+                            "node_modules/@fortawesome/fontawesome-free/css/all.css"
                         ],
                         "scripts": []
                     },
