--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@angular/cli": "~8.3.8",
         "@angular/compiler-cli": "~8.2.9",
         "@angular/language-service": "~8.2.9",
+        "@fortawesome/fontawesome-free": "^5.12.0",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
