--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
                             "node_modules/font-awesome/css/font-awesome.css",
                             "node_modules/@fortawesome/fontawesome-free/css/all.css"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "node_modules/jquery/dist/jquery.min.js"
+                        ]
                     },
                     "configurations": {
                         "production": {
