--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser": "~8.2.9",
         "@angular/platform-browser-dynamic": "~8.2.9",
         "@angular/router": "~8.2.9",
+        "@esri/arcgis-to-geojson-utils": "^1.3.0",
         "@types/arcgis-js-api": "^4.13.0",
         "esri-loader": "^2.12.0",
         "font-awesome": "^4.7.0",
