--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "@angular/platform-browser-dynamic": "~8.2.9",
         "@angular/router": "~8.2.9",
         "@esri/arcgis-to-geojson-utils": "^1.3.0",
-        "@types/arcgis-js-api": "^4.13.0",
-        "esri-loader": "^2.12.0",
+        "@types/arcgis-js-api": "^4.14.0",
+        "esri-loader": "^2.13.0",
         "font-awesome": "^4.7.0",
         "jquery": "^3.4.1",
         "primeicons": "^2.0.0",
@@ -35,21 +35,21 @@
     "devDependencies": {
         "@angular-builders/custom-webpack": "^8.4.1",
         "@angular-devkit/build-angular": "^0.803.21",
-        "@angular/cli": "~8.3.8",
+        "@angular/cli": "^8.3.21",
         "@angular/compiler-cli": "~8.2.9",
         "@angular/language-service": "~8.2.9",
         "@fortawesome/fontawesome-free": "^5.12.0",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
-        "codelyzer": "^5.0.0",
+        "codelyzer": "^5.2.1",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~4.1.0",
         "karma-chrome-launcher": "~2.2.0",
         "karma-coverage-istanbul-reporter": "~2.0.1",
         "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.4.0",
+        "karma-jasmine-html-reporter": "^1.5.1",
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
