--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "esri-loader": "^2.13.0",
         "font-awesome": "^4.7.0",
         "jquery": "^3.4.1",
+        "primeflex": "^1.0.0",
         "primeicons": "^2.0.0",
         "primeng": "^8.1.1",
         "rxjs": "~6.4.0",
