--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@esri/arcgis-to-geojson-utils": "^1.3.0",
         "@types/arcgis-js-api": "^4.14.0",
         "esri-loader": "^2.13.0",
+        "file-saver": "^2.0.2",
         "font-awesome": "^4.7.0",
         "jquery": "^3.4.1",
         "primeflex": "^1.0.0",
@@ -31,6 +32,7 @@
         "rxjs": "~6.4.0",
         "terraformer-arcgis-parser": "^1.1.0",
         "tslib": "^1.10.0",
+        "xlsx": "^0.15.4",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
@@ -40,6 +42,7 @@
         "@angular/compiler-cli": "~8.2.9",
         "@angular/language-service": "~8.2.9",
         "@fortawesome/fontawesome-free": "^5.12.0",
+        "@types/file-saver": "^2.0.1",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
