--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
                             "node_modules/primeng/resources/primeng.min.css",
                             "node_modules/font-awesome/css/font-awesome.css",
                             "node_modules/@fortawesome/fontawesome-free/css/all.css",
-                            "node_modules/primeflex/primeflex.css"
+                            "node_modules/primeflex/primeflex.css",
+                            "node_modules/bootstrap/dist/css/bootstrap.css"
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.min.js"
