--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/router": "~8.2.9",
         "@esri/arcgis-to-geojson-utils": "^1.3.0",
         "@types/arcgis-js-api": "^4.14.0",
+        "bootstrap": "^4.4.1",
         "esri-loader": "^2.13.0",
         "file-saver": "^2.0.2",
         "font-awesome": "^4.7.0",
