--- a/package.json
+++ b/package.json
@@ -1,62 +1,62 @@
 {
-    "name": "geovisor-anh",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "~8.2.9",
-        "@angular/cdk": "^8.2.3",
-        "@angular/common": "~8.2.9",
-        "@angular/compiler": "~8.2.9",
-        "@angular/core": "~8.2.9",
-        "@angular/forms": "~8.2.9",
-        "@angular/platform-browser": "~8.2.9",
-        "@angular/platform-browser-dynamic": "~8.2.9",
-        "@angular/router": "~8.2.9",
-        "@esri/arcgis-to-geojson-utils": "^1.3.0",
-        "@types/arcgis-js-api": "^4.14.0",
-        "esri-loader": "^2.13.0",
-        "file-saver": "^2.0.2",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.4.1",
-        "primeflex": "^1.0.0",
-        "primeicons": "^2.0.0",
-        "primeng": "^9.1.0",
-        "rxjs": "~6.4.0",
-        "terraformer-arcgis-parser": "^1.1.0",
-        "tslib": "^1.11.1",
-        "xlsx": "^0.15.6",
-        "zone.js": "~0.9.1"
-    },
-    "devDependencies": {
-        "@angular-builders/custom-webpack": "^8.4.1",
-        "@angular-devkit/build-angular": "^0.803.25",
-        "@angular/cli": "^8.3.25",
-        "@angular/compiler-cli": "~8.2.9",
-        "@angular/language-service": "~8.2.9",
-        "@fortawesome/fontawesome-free": "^5.12.1",
-        "@types/file-saver": "^2.0.1",
-        "@types/jasmine": "~3.3.8",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "~8.9.4",
-        "codelyzer": "^5.2.1",
-        "jasmine-core": "~3.4.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~4.1.0",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~2.0.1",
-        "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.5.2",
-        "protractor": "^5.4.3",
-        "ts-node": "~7.0.0",
-        "tslint": "~5.15.0",
-        "typescript": "~3.5.3"
-    }
+  "name": "geovisor-anh",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~10.0.0-rc.2",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "~10.0.0-rc.2",
+    "@angular/compiler": "~10.0.0-rc.2",
+    "@angular/core": "~10.0.0-rc.2",
+    "@angular/forms": "~10.0.0-rc.2",
+    "@angular/platform-browser": "~10.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "~10.0.0-rc.2",
+    "@angular/router": "~10.0.0-rc.2",
+    "@esri/arcgis-to-geojson-utils": "^1.3.0",
+    "@types/arcgis-js-api": "^4.14.0",
+    "esri-loader": "^2.13.0",
+    "file-saver": "^2.0.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "primeflex": "^1.0.0",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.1.0",
+    "rxjs": "~6.5.5",
+    "terraformer-arcgis-parser": "^1.1.0",
+    "tslib": "^1.11.1",
+    "xlsx": "^0.15.6",
+    "zone.js": "~0.10.3"
+  },
+  "devDependencies": {
+    "@angular-builders/custom-webpack": "^8.4.1",
+    "@angular-devkit/build-angular": "^0.803.25",
+    "@angular/cli": "^8.3.25",
+    "@angular/compiler-cli": "~10.0.0-rc.2",
+    "@angular/language-service": "~10.0.0-rc.2",
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@types/file-saver": "^2.0.1",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.2.1",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.9.4"
+  }
 }
