--- a/package.json
+++ b/package.json
@@ -31,22 +31,22 @@
     "primeng": "^9.1.0",
     "rxjs": "~6.5.5",
     "terraformer-arcgis-parser": "^1.1.0",
-    "tslib": "^1.11.1",
+    "tslib": "^1.10.0",
     "xlsx": "^0.15.6",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^8.4.1",
-    "@angular-devkit/build-angular": "^0.803.25",
-    "@angular/cli": "^8.3.25",
+    "@angular-devkit/build-angular": "~0.901.7",
+    "@angular/cli": "^9.1.7",
     "@angular/compiler-cli": "~10.0.0-rc.2",
     "@angular/language-service": "~10.0.0-rc.2",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
