--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "explorer.compactFolders": false
+    "explorer.compactFolders": false,
+    "editor.tabSize": 2,
+    "editor.detectIndentation": false
 }
